snapshots/parsers/syntax/library/functions/file/loc/loc_debug_print.snap
---
source: src/syntax/library/functions/file/loc.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Position: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Loc
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: fileNum
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
