snapshots/parsers/syntax/library/functions/file/loc/loc_function_argument.snap
---
source: src/syntax/library/functions/file/loc.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: CallStatement
      children:
        - kind: CallKeyword
          text: Call
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: UpdateProgress
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: Loc
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: fileNum
        - kind: RightParenthesis
          text: )
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
